--- a/web/wp-content/themes/theme/languages/nl_NL.po
+++ b/web/wp-content/themes/theme/languages/nl_NL.po
@@ -1,30 +1,29 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Custom theme\n"
-"POT-Creation-Date: 2025-03-28 14:03+0100\n"
-"PO-Revision-Date: 2025-03-28 14:03+0100\n"
+"POT-Creation-Date: 2025-04-07 15:10+0200\n"
+"PO-Revision-Date: 2025-04-07 15:11+0200\n"
 "Last-Translator: \n"
 "Language-Team: \n"
 "Language: nl\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Generator: Poedit 3.5\n"
+"X-Generator: Poedit 3.6\n"
 "X-Poedit-Basepath: ..\n"
 "X-Poedit-Flags-xgettext: --add-comments=translators:\n"
 "X-Poedit-WPHeader: style.css\n"
 "X-Poedit-SourceCharset: UTF-8\n"
-"X-Poedit-KeywordsList: __;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;"
-"esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;"
-"_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
+"X-Poedit-KeywordsList: "
+"__;_e;_n:1,2;_x:1,2c;_ex:1,2c;_nx:4c,1,2;esc_attr__;esc_attr_e;esc_attr_x:1,2c;esc_html__;esc_html_e;esc_html_x:1,2c;_n_noop:1,2;_nx_noop:3c,1,2;__ngettext_noop:1,2\n"
 "X-Poedit-SearchPath-0: .\n"
 "X-Poedit-SearchPathExcluded-0: *.min.js\n"
 
-#: src/Menu.php:9
+#: src/Menu.php:14
 msgid "Main menu"
 msgstr "Hoofdmenu"
 
-#: src/Menu.php:10
+#: src/Menu.php:15
 msgid "Footer menu"
 msgstr "Footer menu"
 
@@ -122,20 +121,20 @@ msgid "Overwrites the default value in %s settings."
 msgstr "Overschrijft de standaard waarde in %s instellingen."
 
 #. Theme Name of the plugin/theme
-msgid "Custom theme"
-msgstr "Custom thema"
+msgid "Theme"
+msgstr "Thema"
 
 #. Theme URI of the plugin/theme
-msgid "https://github.com/sboerrigter/wordpress-starter"
-msgstr "https://github.com/sboerrigter/wordpress-starter"
+msgid "https://github.com/sboerrigter/start"
+msgstr "https://github.com/sboerrigter/start"
 
 #. Description of the plugin/theme
 msgid ""
 "Custom WordPress theme, built with <a href=\"https://github.com/sboerrigter/"
-"wordpress-starter\">WordPress starter</a>."
+"start\">Start</a>."
 msgstr ""
 "Maatwerk WordPress theme, gemaakt met <a href=“https://github.com/"
-"sboerrigter/wordpress-starter”>WordPress starter</a>."
+"sboerrigter/start”>Start</a>."
 
 #. Author of the plugin/theme
 msgid "Sjoerd Boerrigter"
@@ -144,3 +143,6 @@ msgstr "Sjoerd Boerrigter"
 #. Author URI of the plugin/theme
 msgid "https://www.bonsjoerd.eu"
 msgstr "https://www.bonsjoerd.eu"
+
+#~ msgid "Custom theme"
+#~ msgstr "Custom thema"
